add external deleting and updating
